fix(virtual-background): Hide scrollbar on loading action.

--- a/css/modals/virtual-background/_virtual-background.scss
+++ b/css/modals/virtual-background/_virtual-background.scss
@@ -51,6 +51,10 @@
         margin-right: 5px;
     }
 }
+
+.modal-dialog-form .virtual-background-loading {
+    overflow: hidden;
+}
 .file-upload-btn {
     display: none;
 }
